| Bug #943 | wrong table name in subquery of UPDATE lead to server crash | ||
|---|---|---|---|
| Submitted: | 29 Jul 2003 3:05 | Modified: | 1 Aug 2003 9:09 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 4.1 | OS: | Any (any) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[29 Jul 2003 3:05]
Oleksandr Byelkin
[29 Jul 2003 7:02]
Oleksandr Byelkin
ChangeSet 1.1591 03/07/29 16:59:46 bell@sanja.is.com.ua +7 -0 prevented finding references in item_list for non-SELECT st_select_lex (fixed BUG#943)
