prevented finding references in item_list for non-SELECT st_select_lex (fixed BUG#943)